# faceit_ai

./: .gitignore  README.md  pyproject.toml
config/: default.example.yaml
docs/: faceit_ai_two_phase_pipeline.md  i18n-string-catalog.md  lightroom_exiftool_handoff.md  metadata-lightroom-handoff.md  operations-technical.md  performance-speed-sheet.md
scripts/: Start Faceit AI.bat  Start Faceit AI.command  build_i18n_strings.py
src/faceit_ai/: __init__.py  cli.py  default_config.yaml  gui.py  logging_setup.py  multipart_form.py  reporting.py  settings.py  web_gui.py
src/faceit_ai/decision/: __init__.py  engine.py
src/faceit_ai/i18n/: __init__.py  strings.json
src/faceit_ai/inference/: __init__.py  providers.py
src/faceit_ai/integration/: __init__.py  metadata_port.py  xmp_sidecar.py
src/faceit_ai/metadata/: __init__.py  cleanup.py  exiftool_sync.py  (+1 more)
tests/: test_asset_repository.py  test_audit_people_portraits.py  test_collect_matches.py  test_collected_photos.py  test_decision_engine.py  test_face_crop.py  test_flagged_export.py  test_folder_ingest.py  test_image_ignore.py  test_image_loader_flagged_skip.py  test_inference_providers.py  test_logging_banner.py  test_matcher.py  test_metadata_exiftool.py  test_metadata_xmp.py  test_multipart_form.py  test_normalize_folder_path.py  test_person_profile.py  test_processing_runs.py  test_raw_decode_size.py  test_reporting.py  test_review_confirm.py  test_set_consent.py  test_settings_config.py  test_single_face_crop.py  test_web_gui_gallery_delete.py  test_web_gui_people_create.py  test_web_gui_people_mismatch.py  test_web_gui_review_gallery.py  test_web_gui_save_config.py  test_web_gui_settings_form.py
(+27 files in other folders)
