[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceit-ai"
version = "0.0.3"
description = "Local GDPR-aware face recognition pipeline for photo moderation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Faceit AI" }]
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "rawpy>=0.19.0",
    "Pillow>=10.2",
    "insightface>=1.0.1",
    "onnxruntime>=1.17",
    "SQLAlchemy>=2.0.25",
    "PyYAML>=6.0.1",
    "click>=8.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
# Shared multi-PC database backend (PostgreSQL). Not needed for local SQLite mode.
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
analyze_photos = "faceit_ai.cli:analyze_photos_cli"
register_person = "faceit_ai.cli:register_person_cli"
report_decisions = "faceit_ai.cli:report_decisions_cli"
set_person_consent = "faceit_ai.cli:set_person_consent_cli"
sync_metadata = "faceit_ai.cli:sync_metadata_cli"
faceit_ai_gui = "faceit_ai.gui:main"
faceit_ai_web = "faceit_ai.web_gui:main"
consent_and_sync_person = "faceit_ai.cli:consent_and_sync_person_cli"
init_db = "faceit_ai.cli:init_db_cli"
migrate_sqlite_to_db = "faceit_ai.cli:migrate_sqlite_to_db_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
faceit_ai = ["default_config.yaml", "static/*", "i18n/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
